# infcq-wt

./: README.md
dieptemeting-lambda/: Makefile  dieptemeting-lambda.pro  dieptemeting.cpp  driehoek.cpp  driehoek.h  insprong.h  meting.cpp  meting.h  punt.cpp  punt.h  strook.cpp  strook.h  vaart.cpp  vaart.h
wt2/: Dockerfile  Makefile  README.md
wt2/veelhoek/: CMakeLists.txt  run.sh  veelhoek.cpp
wt3/: Dockerfile  Makefile  Makefile.machine
wt3/teken/: CMakeLists.txt  teken.cpp
wt4/: Dockerfile  Makefile
wt4/teken/: CMakeLists.txt  run.sh  teken.cpp
